--- a/style.css
+++ b/style.css
@@ -209,12 +209,19 @@ PC：main：イメージ1
   background-repeat: no-repeat;
   background-size: 100%;
   width: 100%;
-  height: 668px;
+  height: 0px;
   margin: 99px auto 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding-top: 48.9%;
+  position: relative;
+}
+
+.main_img1_txt{
+  position: absolute;
+  top: 200px;
 }
 
 .main_img1 h2{
@@ -242,12 +249,19 @@ PC：main：イメージ2
   background-repeat: no-repeat;
   background-size: 100%;
   width: 100%;
-  height: 500px;
+  height: 0px;
   margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding-top: 36.6%;
+  position: relative;
+}
+
+.main_img2_txt{
+  position: absolute;
+  top: 73px;
 }
 
 .main_img2 h2{
